# UAVwithRopeLoad

./: README.md  Research.md  技术研究.md
Aggressive Flight With Suspended Payloads Using Vision-Based Control/: Aggressive Flight With Suspended Payloads Using Vision-Based Control.md  RopeController.md
Minimum Snap Trajectory Generation and Control for Quadrotors/: Minimum Snap浅度还行文.md
README.assets/: 20150715210735140  8519325.html
Research.assets/: 20150715210738728  20150715210741814  20150715210744219
Resources/papers/带悬绳负载的无人机视觉跟踪控制/: 带悬绳负载的无人机视觉跟踪控制研究.md
data/: payloadControl_PrecisePos.csv  payloadWithoutControl_PrecisePos.csv
papers/带悬绳负载的无人机视觉跟踪控制/: quadcopter.ttt  毕业论文-15S053193-崔健-2015级-V6.pdf~RF61da22f.TMP
quadcopter_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
quadcopter_ws/devel/lib/pkgconfig/: rviz_plugins.pc  waypoint_generator.pc  waypoint_trajectory_generator.pc
quadcopter_ws/devel/lib/waypoint_generator/: waypoint_generator
quadcopter_ws/devel/lib/waypoint_trajectory_generator/: demo_node
quadcopter_ws/devel/share/rviz_plugins/cmake/: rviz_pluginsConfig.cmake
quadcopter_ws/devel/share/waypoint_generator/cmake/: waypoint_generatorConfig.cmake
quadcopter_ws/devel/share/waypoint_trajectory_generator/cmake/: waypoint_trajectory_generatorConfig.cmake
quadcopter_ws/src/flightController/: CMakeLists.txt  package.xml
quadcopter_ws/src/flightController/app/: flightController_node.cpp
quadcopter_ws/src/flightController/include/: database.h  flightController.h  trajectory_generator_waypoint_f.h
quadcopter_ws/src/flightController/scenes/: quadcopter.ttt
quadcopter_ws/src/flightController/src/: flightController.cpp  kTrack.cpp  main.cpp  trajectory_generator_waypoint_f.cpp
quadcopter_ws/src/quadcopter/: CMakeLists.txt  package.xml
quadcopter_ws/src/quadcopter/src/: main_node.cpp
quadcopter_ws/src/tracker/: CMakeLists.txt
quadcopter_ws/src/tracker/backup/: payloadControl_PrecisePos_backup.cpp
quadcopter_ws/src/tracker/include/: antiSwing.h
quadcopter_ws/src/tracker/launch/: controller_payload_apriltag.launch  payloadTracker.launch
quadcopter_ws/src/tracker/src/: antiSwing.cpp  main.cpp  main_backup.cpp  payloadControl_PrecisePos.cpp  quadcopter.lua  quadcopter_origin.lua  rotors_control_include_rotors_control_lee_payload_position_controller.h  rotors_control_src_library_lee_payload_position_controller.cpp  staple_tracker.cpp  tracker.cpp
quadcopter_ws/src/waypoint_generator/src/: waypoint_generator.cpp
quadcopter_ws/src/waypoint_trajectory_generator/: CMakeLists.txt
quadcopter_ws/src/waypoint_trajectory_generator/app/: demo_node.cpp  demo_node_backup.cpp
quadcopter_ws/src/waypoint_trajectory_generator/include/: trajectory_generator_waypoint.h
quadcopter_ws/src/waypoint_trajectory_generator/launch/: test.launch
quadcopter_ws/src/waypoint_trajectory_generator/src/: trajectory_generator_node.cpp  trajectory_generator_waypoint.cpp  trajectory_generator_waypoint.h
scenes/: apriltag_test.ttt  quadcopter.ttt  quarter.ttt  quarter_PrecisePos.ttt  quarter_Vision.ttt  quarter_backup.ttt  quarter_v2.ttt  quarter_v3.ttt  ropeTest.ttt
(+1 files in other folders)
